--- a/src/app/word-card/word-card.component.scss
+++ b/src/app/word-card/word-card.component.scss
@@ -1,11 +1,11 @@
-@use '../../styles/variables.scss';
+@use "../../styles/variables.scss";
 
 .word-card {
 	width: 50%;
-    height: 60%;
+	height: 60%;
 }
 
 .fill {
-    min-height: 100%;
-    height: 100vh;
+	min-height: 100%;
+	height: 100vh;
 }
